--- a/01-js/hard/calculator.css
+++ b/01-js/hard/calculator.css
@@ -39,12 +39,14 @@
     height: 250px;
     width: 500px;
     text-align: center;
+    border-radius: 10px;
 }
 .calculator-div-heading {
     font-size: 25px;
     background-color: lightblue;
     border-bottom: 5px solid black;
     padding: 3px;
+    border-radius: 10px;
 }
 
 .calculator-div-fields-text{
